--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
   <a href="https://ykudnn.github.io/MyHeartAnimation/">MyHeartAnimation</a>
   <a href="https://ykudnn.github.io/ReactTodoApp/">ReactTodoApp</a>
   <a href="https://ykudnn.github.io/MyFirebaseProject/">MyFirebaseProject</a>
-  <a href="https://ykudnn.github.io/MyHeartAnimation/">MyHeartAnimation</a>
-  <a href="https://ykudnn.github.io/MyHeartAnimation/">MyHeartAnimation</a>
-  <a href="https://ykudnn.github.io/MyHeartAnimation/">MyHeartAnimation</a>
-  <a href="https://ykudnn.github.io/MyHeartAnimation/">MyHeartAnimation</a>
+  <a href="https://ykudnn.github.io/My15Puzzle/">My15Puzzle</a>
 </body>
 
 </html>
