--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <a href="https://ykudnn.github.io/ReactTodoApp/">ReactTodoApp</a>
   <a href="https://ykudnn.github.io/MyFirebaseProject/">MyFirebaseProject</a>
   <a href="https://ykudnn.github.io/My15Puzzle/">My15Puzzle</a>
+  <a href="https://ykudnn.github.io/MyInteractiveArt/">MyInteractiveArt</a>
 </body>
 
 </html>
